# mlx-music

./: README.md  TODO.md  pyproject.toml
mlx_music/: __init__.py  cli.py
mlx_music/codecs/: __init__.py
mlx_music/models/: __init__.py
mlx_music/models/ace_step/: __init__.py  attention.py  dcae.py  model.py  scheduler.py  text_encoder.py  transformer.py  vocoder.py
mlx_music/models/musicgen/: __init__.py  conditioning.py  config.py  generation.py  kv_cache.py  model.py  transformer.py
mlx_music/models/stable_audio/: __init__.py  conditioning.py  config.py  model.py  scheduler.py  text_encoder.py  transformer.py  vae.py
mlx_music/training/: __init__.py
mlx_music/training/ace_step/: __init__.py  dataset.py  lora_layers.py  loss.py  trainer.py
mlx_music/training/common/: __init__.py  ema.py  gradient_accumulator.py  loss.py  lr_scheduler.py
mlx_music/training/musicgen/: __init__.py  lora_layers.py  loss.py
mlx_music/training/stable_audio/: __init__.py  lora_layers.py  loss.py
mlx_music/utils/: __init__.py  audio_metrics.py  device.py  dsp.py  mel.py
mlx_music/weights/: __init__.py  quantization.py  weight_loader.py
scripts/: __init__.py  benchmark.py  generate.py  profile_quantization.py  test_generation.py  test_quantization.py  test_weight_loading.py
tests/: test_ace_step.py  test_dsp_caching.py  test_hf_hub.py  test_kv_cache.py  test_lazy_loading.py  test_musicgen.py  test_quantization.py  test_scheduler.py  test_stable_audio.py
tests/training/: conftest.py  test_integration.py
tests/training/ace_step/: test_dataset.py  test_lora_layers.py  test_loss.py  test_trainer.py
tests/training/common/: test_ema.py  test_gradient_accumulator.py  test_loss.py  test_lr_scheduler.py
tests/training/musicgen/: test_lora_layers.py  test_loss.py
tests/training/stable_audio/: test_lora_layers.py  test_loss.py
